--- a/www/apps/resources/app/medusa-cli/commands/plugin/page.mdx
+++ b/www/apps/resources/app/medusa-cli/commands/plugin/page.mdx
@@ -80,6 +80,16 @@ npx medusa plugin:develop
 
 ---
 
+## plugin\:db\:generate
+
+Generate migrations for all modules in a plugin.
+
+```bash
+npx medusa plugin:db:generate
+```
+
+---
+
 ## plugin\:build
 
 Build a plugin before publishing it to NPM. The command will compile an output in the `.medusa/server` directory.
