--- a/www/apps/book/app/learn/fundamentals/modules/page.mdx
+++ b/www/apps/book/app/learn/fundamentals/modules/page.mdx
@@ -177,6 +177,12 @@ You don't have to write migrations yourself. Medusa's CLI tool has a command tha
 
 To generate a migration for the Blog Module, run the following command in your Medusa application's directory:
 
+<Note>
+
+If you're creating the module in a plugin, use the [plugin\:db\:generate command](!resources!/medusa-cli/commands/plugin#plugindbgenerate) instead.
+
+</Note>
+
 ```bash
 npx medusa db:generate blog
 ```
@@ -204,6 +210,12 @@ In the migration class, the `up` method creates the table `post` and defines its
 ### 6. Run Migrations
 
 To reflect the changes in the generated migration file on the database, run the `db:migrate` command:
+
+<Note>
+
+If you're creating the module in a plugin, run this command on the Medusa application that the plugin is installed in.
+
+</Note>
 
 ```bash
 npx medusa db:migrate
