fix generated example for array types

--- a/www/apps/resources/references/core_flows/Api_Key/Steps_Api_Key/functions/core_flows.Api_Key.Steps_Api_Key.deleteApiKeysStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Api_Key/Steps_Api_Key/functions/core_flows.Api_Key.Steps_Api_Key.deleteApiKeysStep/page.mdx
@@ -21,7 +21,9 @@ import { deleteApiKeysStep } from "@medusajs/medusa/core-flows"
 const myWorkflow = createWorkflow(
   "my-workflow",
   () => {
-    const data = deleteApiKeysStep({})
+    const data = deleteApiKeysStep([
+      "{value}"
+    ])
   }
 )
 ```
