--- a/www/apps/resources/references/core_flows/Customer/Steps_Customer/functions/core_flows.Customer.Steps_Customer.deleteCustomersStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Customer/Steps_Customer/functions/core_flows.Customer.Steps_Customer.deleteCustomersStep/page.mdx
@@ -21,7 +21,9 @@ import { deleteCustomersStep } from "@medusajs/medusa/core-flows"
 const myWorkflow = createWorkflow(
   "my-workflow",
   () => {
-    const data = deleteCustomersStep({})
+    const data = deleteCustomersStep([
+      "{value}"
+    ])
   }
 )
 ```
