--- a/www/apps/resources/references/core_flows/Fulfillment/Steps_Fulfillment/functions/core_flows.Fulfillment.Steps_Fulfillment.createShippingOptionsPriceSetsStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Fulfillment/Steps_Fulfillment/functions/core_flows.Fulfillment.Steps_Fulfillment.createShippingOptionsPriceSetsStep/page.mdx
@@ -22,10 +22,10 @@ const myWorkflow = createWorkflow(
   "my-workflow",
   () => {
     const data = createShippingOptionsPriceSetsStep({
-      "id": "id_8JfyfruBy38sI6Dm",
+      "id": "id_NH0RhW8HXIpJ",
       "prices": [{
-        "currency_code": "dop",
-        "amount": 7
+        "currency_code": "zmw",
+        "amount": 27
       }]
     })
   }
