--- a/www/apps/resources/references/core_flows/Fulfillment/Steps_Fulfillment/functions/core_flows.Fulfillment.Steps_Fulfillment.deleteFulfillmentSetsStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Fulfillment/Steps_Fulfillment/functions/core_flows.Fulfillment.Steps_Fulfillment.deleteFulfillmentSetsStep/page.mdx
@@ -21,7 +21,9 @@ import { deleteFulfillmentSetsStep } from "@medusajs/medusa/core-flows"
 const myWorkflow = createWorkflow(
   "my-workflow",
   () => {
-    const data = deleteFulfillmentSetsStep({})
+    const data = deleteFulfillmentSetsStep([
+      "{value}"
+    ])
   }
 )
 ```
