--- a/www/apps/resources/references/core_flows/Fulfillment/Steps_Fulfillment/functions/core_flows.Fulfillment.Steps_Fulfillment.deleteShippingOptionRulesStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Fulfillment/Steps_Fulfillment/functions/core_flows.Fulfillment.Steps_Fulfillment.deleteShippingOptionRulesStep/page.mdx
@@ -23,7 +23,7 @@ const myWorkflow = createWorkflow(
   () => {
     const data = deleteShippingOptionRulesStep({
       "ids": [
-        "id_b2A1gGEHL0OLQ2Xz6zKq"
+        "id_GzVuff1Xkr4r8LzDJ"
       ]
     })
   }
