--- a/www/apps/resources/references/core_flows/Inventory/Steps_Inventory/functions/core_flows.Inventory.Steps_Inventory.deleteInventoryLevelsStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Inventory/Steps_Inventory/functions/core_flows.Inventory.Steps_Inventory.deleteInventoryLevelsStep/page.mdx
@@ -18,7 +18,9 @@ import { deleteInventoryLevelsStep } from "@medusajs/medusa/core-flows"
 const myWorkflow = createWorkflow(
   "my-workflow",
   () => {
-    const data = deleteInventoryLevelsStep({})
+    const data = deleteInventoryLevelsStep([
+      "{value}"
+    ])
   }
 )
 ```
