--- a/www/apps/resources/references/core_flows/Inventory/Steps_Inventory/functions/core_flows.Inventory.Steps_Inventory.validateInventoryDeleteStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Inventory/Steps_Inventory/functions/core_flows.Inventory.Steps_Inventory.validateInventoryDeleteStep/page.mdx
@@ -20,8 +20,8 @@ const myWorkflow = createWorkflow(
   () => {
     const data = validateInventoryDeleteStep({
       "inventory_items": [{
-        "id": "id_76YiV5rG5UkrbqEL7V",
-        "reserved_quantity": 11
+        "id": "id_6gGZzIHl9uVxxZiS39",
+        "reserved_quantity": 6
       }]
     })
   }
