--- a/www/apps/resources/references/core_flows/Invite/Steps_Invite/functions/core_flows.Invite.Steps_Invite.refreshInviteTokensStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Invite/Steps_Invite/functions/core_flows.Invite.Steps_Invite.refreshInviteTokensStep/page.mdx
@@ -21,7 +21,9 @@ import { refreshInviteTokensStep } from "@medusajs/medusa/core-flows"
 const myWorkflow = createWorkflow(
   "my-workflow",
   () => {
-    const data = refreshInviteTokensStep({})
+    const data = refreshInviteTokensStep([
+      "{value}"
+    ])
   }
 )
 ```
