--- a/www/apps/resources/references/core_flows/Order/Steps_Order/functions/core_flows.Order.Steps_Order.cancelOrderChangeStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Order/Steps_Order/functions/core_flows.Order.Steps_Order.cancelOrderChangeStep/page.mdx
@@ -22,7 +22,7 @@ const myWorkflow = createWorkflow(
   "my-workflow",
   () => {
     const data = cancelOrderChangeStep({
-      "id": "id_c7KY7UOjumoNID0"
+      "id": "id_b201gMN6s6pX"
     })
   }
 )
