--- a/www/apps/resources/references/core_flows/Order/Steps_Order/functions/core_flows.Order.Steps_Order.deleteOrderChangeActionsStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Order/Steps_Order/functions/core_flows.Order.Steps_Order.deleteOrderChangeActionsStep/page.mdx
@@ -23,7 +23,7 @@ const myWorkflow = createWorkflow(
   () => {
     const data = deleteOrderChangeActionsStep({
       "ids": [
-        "id_OY0AIrMpzWy"
+        "id_0qwdyZ6FPRfi4"
       ]
     })
   }
