--- a/www/apps/resources/references/core_flows/Order/Steps_Order/functions/core_flows.Order.Steps_Order.deleteOrderChangesStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Order/Steps_Order/functions/core_flows.Order.Steps_Order.deleteOrderChangesStep/page.mdx
@@ -23,7 +23,7 @@ const myWorkflow = createWorkflow(
   () => {
     const data = deleteOrderChangesStep({
       "ids": [
-        "id_pq3aUDHX7Md497xWu"
+        "id_gUw13ZLr3AvjtddhUXUM"
       ]
     })
   }
