--- a/www/apps/resources/references/core_flows/Order/Steps_Order/functions/core_flows.Order.Steps_Order.deleteOrderLineItems/page.mdx
+++ b/www/apps/resources/references/core_flows/Order/Steps_Order/functions/core_flows.Order.Steps_Order.deleteOrderLineItems/page.mdx
@@ -20,7 +20,7 @@ const myWorkflow = createWorkflow(
   () => {
     const data = deleteOrderLineItems({
       "ids": [
-        "id_8T1lOO7HZawta"
+        "id_vDZCBu5EBU3a"
       ]
     })
   }
