--- a/www/apps/resources/references/core_flows/Order/Steps_Order/functions/core_flows.Order.Steps_Order.deleteOrderShippingMethods/page.mdx
+++ b/www/apps/resources/references/core_flows/Order/Steps_Order/functions/core_flows.Order.Steps_Order.deleteOrderShippingMethods/page.mdx
@@ -23,7 +23,7 @@ const myWorkflow = createWorkflow(
   () => {
     const data = deleteOrderShippingMethods({
       "ids": [
-        "id_IDItNU4xAiuJz"
+        "id_pIlisTsCTeer"
       ]
     })
   }
