--- a/www/apps/resources/references/core_flows/Order/Steps_Order/functions/core_flows.Order.Steps_Order.updateOrderChangesStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Order/Steps_Order/functions/core_flows.Order.Steps_Order.updateOrderChangesStep/page.mdx
@@ -22,7 +22,7 @@ const myWorkflow = createWorkflow(
   "my-workflow",
   () => {
     const data = updateOrderChangesStep({
-      "id": "id_1UAd5Pa9vVZ0992fn6A"
+      "id": "id_dIX3wy99LmnObZpj0lYF"
     })
   }
 )
