--- a/www/apps/resources/references/core_flows/Order/Steps_Order/functions/core_flows.Order.Steps_Order.updateOrderExchangesStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Order/Steps_Order/functions/core_flows.Order.Steps_Order.updateOrderExchangesStep/page.mdx
@@ -22,7 +22,7 @@ const myWorkflow = createWorkflow(
   "my-workflow",
   () => {
     const data = updateOrderExchangesStep({
-      "id": "id_pII1f6Kdq9"
+      "id": "id_ETtewmymki8g"
     })
   }
 )
