--- a/www/apps/resources/references/core_flows/Order/Workflows_Order/functions/core_flows.Order.Workflows_Order.throwUnlessStatusIsNotPaid/page.mdx
+++ b/www/apps/resources/references/core_flows/Order/Workflows_Order/functions/core_flows.Order.Workflows_Order.throwUnlessStatusIsNotPaid/page.mdx
@@ -23,14 +23,14 @@ const myWorkflow = createWorkflow(
   () => {
     const data = throwUnlessStatusIsNotPaid({
       "paymentCollection": {
-        "id": "id_DAvz7UUjLPBdZ",
-        "currency_code": "cdf",
+        "id": "id_DgIGVgO8KW7yAsbUYU6",
+        "currency_code": "fkp",
         "amount": {
-          "numeric": 17
+          "numeric": 23
         },
-        "status": "canceled",
+        "status": "awaiting",
         "payment_providers": [{
-          "id": "id_9fGWHED0E42VszF5t5i",
+          "id": "id_ttwrJ64jA2i4keg",
           "is_enabled": true
         }]
       }
