--- a/www/apps/resources/references/core_flows/Payment_Collection/Steps_Payment_Collection/functions/core_flows.Payment_Collection.Steps_Payment_Collection.deletePaymentSessionsStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Payment_Collection/Steps_Payment_Collection/functions/core_flows.Payment_Collection.Steps_Payment_Collection.deletePaymentSessionsStep/page.mdx
@@ -27,7 +27,7 @@ const myWorkflow = createWorkflow(
   () => {
     const data = deletePaymentSessionsStep({
       "ids": [
-        "id_ace3PuJdJooJ"
+        "id_grn6GvxuAux"
       ]
     })
   }
