--- a/www/apps/resources/references/core_flows/Payment_Collection/Steps_Payment_Collection/functions/core_flows.Payment_Collection.Steps_Payment_Collection.updateRefundReasonsStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Payment_Collection/Steps_Payment_Collection/functions/core_flows.Payment_Collection.Steps_Payment_Collection.updateRefundReasonsStep/page.mdx
@@ -22,7 +22,7 @@ const myWorkflow = createWorkflow(
   "my-workflow",
   () => {
     const data = updateRefundReasonsStep({
-      "id": "id_qk2JWrpQIWjMIQ"
+      "id": "id_26Rm91NGONuFY202e38"
     })
   }
 )
