--- a/www/apps/resources/references/core_flows/Price_List/Steps_Price_List/functions/core_flows.Price_List.Steps_Price_List.validatePriceListsStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Price_List/Steps_Price_List/functions/core_flows.Price_List.Steps_Price_List.validatePriceListsStep/page.mdx
@@ -23,7 +23,7 @@ const myWorkflow = createWorkflow(
   "my-workflow",
   () => {
     const data = validatePriceListsStep({
-      "id": "id_fv8HSAtriNFI"
+      "id": "id_HvYNsQet1i6jMX"
     })
   }
 )
