--- a/www/apps/resources/references/core_flows/Pricing/Steps_Pricing/functions/core_flows.Pricing.Steps_Pricing.deletePricePreferencesStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Pricing/Steps_Pricing/functions/core_flows.Pricing.Steps_Pricing.deletePricePreferencesStep/page.mdx
@@ -21,7 +21,9 @@ import { deletePricePreferencesStep } from "@medusajs/medusa/core-flows"
 const myWorkflow = createWorkflow(
   "my-workflow",
   () => {
-    const data = deletePricePreferencesStep({})
+    const data = deletePricePreferencesStep([
+      "{value}"
+    ])
   }
 )
 ```
