--- a/www/apps/resources/references/core_flows/Product/Steps_Product/functions/core_flows.Product.Steps_Product.deleteProductOptionsStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Product/Steps_Product/functions/core_flows.Product.Steps_Product.deleteProductOptionsStep/page.mdx
@@ -21,7 +21,9 @@ import { deleteProductOptionsStep } from "@medusajs/medusa/core-flows"
 const myWorkflow = createWorkflow(
   "my-workflow",
   () => {
-    const data = deleteProductOptionsStep({})
+    const data = deleteProductOptionsStep([
+      "{value}"
+    ])
   }
 )
 ```
