--- a/www/apps/resources/references/core_flows/Promotion/Workflows_Promotion/functions/core_flows.Promotion.Workflows_Promotion.updatePromotionsValidationStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Promotion/Workflows_Promotion/functions/core_flows.Promotion.Workflows_Promotion.updatePromotionsValidationStep/page.mdx
@@ -21,8 +21,8 @@ const myWorkflow = createWorkflow(
   () => {
     const data = updatePromotionsValidationStep({
       "promotionsData": [{
-        "id": "id_mo02uI3JoDv",
-        "status": "draft"
+        "id": "id_K9R6MPyRuEBek3tqnU",
+        "status": "active"
       }]
     })
   }
