--- a/www/apps/resources/references/core_flows/Region/Steps_Region/functions/core_flows.Region.Steps_Region.deleteRegionsStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Region/Steps_Region/functions/core_flows.Region.Steps_Region.deleteRegionsStep/page.mdx
@@ -21,7 +21,9 @@ import { deleteRegionsStep } from "@medusajs/medusa/core-flows"
 const myWorkflow = createWorkflow(
   "my-workflow",
   () => {
-    const data = deleteRegionsStep({})
+    const data = deleteRegionsStep([
+      "{value}"
+    ])
   }
 )
 ```
