--- a/www/apps/resources/references/core_flows/Store/Steps_Store/functions/core_flows.Store.Steps_Store.deleteStoresStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Store/Steps_Store/functions/core_flows.Store.Steps_Store.deleteStoresStep/page.mdx
@@ -21,7 +21,9 @@ import { deleteStoresStep } from "@medusajs/medusa/core-flows"
 const myWorkflow = createWorkflow(
   "my-workflow",
   () => {
-    const data = deleteStoresStep({})
+    const data = deleteStoresStep([
+      "{value}"
+    ])
   }
 )
 ```
