--- a/www/apps/resources/references/core_flows/Tax/Steps_Tax/functions/core_flows.Tax.Steps_Tax.deleteTaxRatesStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Tax/Steps_Tax/functions/core_flows.Tax.Steps_Tax.deleteTaxRatesStep/page.mdx
@@ -21,7 +21,9 @@ import { deleteTaxRatesStep } from "@medusajs/medusa/core-flows"
 const myWorkflow = createWorkflow(
   "my-workflow",
   () => {
-    const data = deleteTaxRatesStep({})
+    const data = deleteTaxRatesStep([
+      "{value}"
+    ])
   }
 )
 ```
