--- a/www/apps/resources/references/core_flows/Cart/Steps_Cart/functions/core_flows.Cart.Steps_Cart.retrieveCartStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Cart/Steps_Cart/functions/core_flows.Cart.Steps_Cart.retrieveCartStep/page.mdx
@@ -19,7 +19,7 @@ const myWorkflow = createWorkflow(
   "my-workflow",
   () => {
     const data = retrieveCartStep({
-      "id": "id_qYM0EgoXOjzpmqC0"
+      "id": "id_tIULreHow5TgE"
     })
   }
 )
