--- a/www/apps/resources/references/core_flows/Cart/Steps_Cart/functions/core_flows.Cart.Steps_Cart.updateCartPromotionsStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Cart/Steps_Cart/functions/core_flows.Cart.Steps_Cart.updateCartPromotionsStep/page.mdx
@@ -24,7 +24,7 @@ const myWorkflow = createWorkflow(
   "my-workflow",
   () => {
     const data = updateCartPromotionsStep({
-      "id": "id_bpO3HW8GuoGO"
+      "id": "id_wOHNXrVXqYZ4xc"
     })
   }
 )
