--- a/www/apps/resources/references/core_flows/Inventory/Steps_Inventory/functions/core_flows.Inventory.Steps_Inventory.deleteInventoryItemStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Inventory/Steps_Inventory/functions/core_flows.Inventory.Steps_Inventory.deleteInventoryItemStep/page.mdx
@@ -21,7 +21,9 @@ import { deleteInventoryItemStep } from "@medusajs/medusa/core-flows"
 const myWorkflow = createWorkflow(
   "my-workflow",
   () => {
-    const data = deleteInventoryItemStep({})
+    const data = deleteInventoryItemStep([
+      "{value}"
+    ])
   }
 )
 ```
