--- a/www/apps/resources/references/core_flows/Invite/Steps_Invite/functions/core_flows.Invite.Steps_Invite.deleteInvitesStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Invite/Steps_Invite/functions/core_flows.Invite.Steps_Invite.deleteInvitesStep/page.mdx
@@ -21,7 +21,9 @@ import { deleteInvitesStep } from "@medusajs/medusa/core-flows"
 const myWorkflow = createWorkflow(
   "my-workflow",
   () => {
-    const data = deleteInvitesStep({})
+    const data = deleteInvitesStep([
+      "{value}"
+    ])
   }
 )
 ```
