--- a/www/apps/resources/references/core_flows/Order/Steps_Order/functions/core_flows.Order.Steps_Order.addOrderTransactionStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Order/Steps_Order/functions/core_flows.Order.Steps_Order.addOrderTransactionStep/page.mdx
@@ -23,8 +23,8 @@ const myWorkflow = createWorkflow(
   () => {
     const data = addOrderTransactionStep({
       "order_id": "order_123",
-      "amount": 23,
-      "currency_code": "mru"
+      "amount": 7,
+      "currency_code": "ang"
     })
   }
 )
