--- a/www/apps/resources/references/core_flows/Order/Steps_Order/functions/core_flows.Order.Steps_Order.deleteClaimsStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Order/Steps_Order/functions/core_flows.Order.Steps_Order.deleteClaimsStep/page.mdx
@@ -23,7 +23,7 @@ const myWorkflow = createWorkflow(
   () => {
     const data = deleteClaimsStep({
       "ids": [
-        "id_ZeSZrJ7k12UOy5gEpq5"
+        "id_dwTYGTiBHa"
       ]
     })
   }
