--- a/www/apps/resources/references/core_flows/Order/Steps_Order/functions/core_flows.Order.Steps_Order.updateOrderChangeActionsStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Order/Steps_Order/functions/core_flows.Order.Steps_Order.updateOrderChangeActionsStep/page.mdx
@@ -22,7 +22,7 @@ const myWorkflow = createWorkflow(
   "my-workflow",
   () => {
     const data = updateOrderChangeActionsStep({
-      "id": "id_sUVhTWhO5IRB"
+      "id": "id_nLoyRTMYmiR3yptJ"
     })
   }
 )
