--- a/www/apps/resources/references/core_flows/Order/Steps_Order/functions/core_flows.Order.Steps_Order.updateReturnsStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Order/Steps_Order/functions/core_flows.Order.Steps_Order.updateReturnsStep/page.mdx
@@ -21,7 +21,7 @@ const myWorkflow = createWorkflow(
   "my-workflow",
   () => {
     const data = updateReturnsStep({
-      "id": "id_ztRn6gMVhP9LP"
+      "id": "id_WvyDKcPVdG"
     })
   }
 )
