--- a/www/apps/resources/references/core_flows/Payment_Collection/Steps_Payment_Collection/functions/core_flows.Payment_Collection.Steps_Payment_Collection.createPaymentSessionStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Payment_Collection/Steps_Payment_Collection/functions/core_flows.Payment_Collection.Steps_Payment_Collection.createPaymentSessionStep/page.mdx
@@ -24,8 +24,8 @@ const myWorkflow = createWorkflow(
     const data = createPaymentSessionStep({
       "payment_collection_id": "{value}",
       "provider_id": "{value}",
-      "amount": 48,
-      "currency_code": "chf"
+      "amount": 4,
+      "currency_code": "aed"
     })
   }
 )
