--- a/www/apps/resources/references/core_flows/Product/Steps_Product/functions/core_flows.Product.Steps_Product.deleteCollectionsStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Product/Steps_Product/functions/core_flows.Product.Steps_Product.deleteCollectionsStep/page.mdx
@@ -21,7 +21,9 @@ import { deleteCollectionsStep } from "@medusajs/medusa/core-flows"
 const myWorkflow = createWorkflow(
   "my-workflow",
   () => {
-    const data = deleteCollectionsStep({})
+    const data = deleteCollectionsStep([
+      "{value}"
+    ])
   }
 )
 ```
