--- a/www/apps/resources/references/core_flows/Reservation/Steps_Reservation/functions/core_flows.Reservation.Steps_Reservation.deleteReservationsByLineItemsStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Reservation/Steps_Reservation/functions/core_flows.Reservation.Steps_Reservation.deleteReservationsByLineItemsStep/page.mdx
@@ -21,7 +21,9 @@ import { deleteReservationsByLineItemsStep } from "@medusajs/medusa/core-flows"
 const myWorkflow = createWorkflow(
   "my-workflow",
   () => {
-    const data = deleteReservationsByLineItemsStep({})
+    const data = deleteReservationsByLineItemsStep([
+      "{value}"
+    ])
   }
 )
 ```
