--- a/www/apps/resources/references/core_flows/Sales_Channel/Steps_Sales_Channel/functions/core_flows.Sales_Channel.Steps_Sales_Channel.deleteSalesChannelsStep/page.mdx
+++ b/www/apps/resources/references/core_flows/Sales_Channel/Steps_Sales_Channel/functions/core_flows.Sales_Channel.Steps_Sales_Channel.deleteSalesChannelsStep/page.mdx
@@ -21,7 +21,9 @@ import { deleteSalesChannelsStep } from "@medusajs/medusa/core-flows"
 const myWorkflow = createWorkflow(
   "my-workflow",
   () => {
-    const data = deleteSalesChannelsStep({})
+    const data = deleteSalesChannelsStep([
+      "{value}"
+    ])
   }
 )
 ```
