added wishlist guide + other changes

--- a/www/apps/book/app/learn/fundamentals/plugins/create/page.mdx
+++ b/www/apps/book/app/learn/fundamentals/plugins/create/page.mdx
@@ -36,7 +36,7 @@ After the installation is done, the plugin structure will look like this:
 
 - `src/`: Contains the Medusa customizations.
 - `src/admin`: Contains [admin extensions](../../admin/page.mdx).
-- `src/api`: Contains [API routes](../../api-routes/page.mdx). You can add store, admin, or any custom API routes.
+- `src/api`: Contains [API routes](../../api-routes/page.mdx) and [middlewares](../../api-routes/middlewares/page.mdx). You can add store, admin, or any custom API routes.
 - `src/jobs`: Contains [scheduled jobs](../../scheduled-jobs/page.mdx).
 - `src/links`: Contains [module links](../../module-links/page.mdx).
 - `src/modules`: Contains [modules](../../modules/page.mdx).
