--- a/www/apps/book/app/learn/fundamentals/plugins/page.mdx
+++ b/www/apps/book/app/learn/fundamentals/plugins/page.mdx
@@ -18,6 +18,14 @@ A plugin is a package of reusable Medusa customizations that you can install in 
 
 Plugins allow you to reuse your Medusa customizations across multiple projects or share them with the community. They can be published to npm and installed in any Medusa project.
 
+![Diagram showcasing a wishlist plugin installed in a Medusa application](https://res.cloudinary.com/dza7lstvk/image/upload/v1737540762/Medusa%20Book/plugin-diagram_oepiis.jpg)
+
+<Note title="Tip">
+
+Learn how to create a wishlist plugin in [this guide](!resources!/plugins/guides/wishlist).
+
+</Note>
+
 ---
 
 ## Plugin vs Module
@@ -46,3 +54,9 @@ For example, in a plugin, you can define a module that integrates a third-party 
 ## How to Create a Plugin?
 
 The next chapter explains how you can create and publish a plugin.
+
+---
+
+## Plugin Guides and Resources
+
+For more resources and guides related to plugins, refer to the [Resources documentation](!resources!/plugins).
